--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="ru" class="h-100">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}FooDate{% endblock %}</title>
 
         {% load static %}
@@ -49,6 +50,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Rajdhani&display=swap"
+              rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Montserrat+Alternates:wght@300&display=swap"
               rel="stylesheet">
 
         <!-- js-cookie -->
