--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,4 +1,5 @@
 header {
+    padding-top: 5px;
     position: sticky;
     top: 0;
     background-color: white;
@@ -8,6 +9,9 @@ header {
 .navbar-brand {
     float: left;
     margin-left: 30px;
+    padding: 0 10px 0 0;
+    border: 1px solid #219C21;
+    border-radius: 100px;
 }
 
 #logo {
