--- a/templates/users/mobile/profile.html
+++ b/templates/users/mobile/profile.html
@@ -1,6 +1,12 @@
+
+
 <div>
-    <h4 class="text-center mt-3">Профиль</h4>
-    <hr>
+    <div style="position: sticky; top: 0; height: 45px; max-height: 45px; background-color: white;
+        z-index: 99;">
+        <h4 class="text-center h-100 m-0 pt-1">Профиль</h4>
+        <hr class="m-0 text-apple">
+    </div>
+
     <div class="mx-auto my-4 text-center d-flex flex-column align-items-center">
 
         <form method="post" class="mb-4 d-flex flex-column align-items-center w-75">
