--- a/templates/app/app.html
+++ b/templates/app/app.html
@@ -20,7 +20,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col">
-                <div id="productsTimeLine" class="row justify-content-center mt-5">
+                <div id="productsTimeLine" class="row justify-content-center pt-5">
                     <div class="spinner-border text-apple" role="status"></div>
                 </div>
             </div>
