--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,9 @@
         <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
 
         <!-- API -->
+        {% if token %}
+            <script type="text/javascript">token = '{{ token }}';</script>
+        {% endif %}
         <script type="text/javascript" src="{% static 'js/api.js' %}"></script>
 
         {{ form.media }}
