--- a/templates/mobile_header.html
+++ b/templates/mobile_header.html
@@ -1,11 +1,9 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/mobile_header.css' %}">
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
 <label>
     <input type="checkbox">
-    <span class="menu">
+    <span id="header-menu-button" class="menu">
         <span class="hamburger"></span>
     </span>
     <ul class="list-group list-group-flush" id="header">
