--- a/static/css/mobile_header.css
+++ b/static/css/mobile_header.css
@@ -3,6 +3,11 @@ main {
     padding-bottom: 20px;
 }
 
+#header {
+    position: fixed;
+    top: 300px;
+}
+
 #logo {
     width: 50px;
     height: 50px;
@@ -37,7 +42,6 @@ main {
 html {
     font-size: 18px;
 }
-
 
 label .menu {
     position: fixed;
