Added mobile current product page

--- a/static/css/book/product.css
+++ b/static/css/book/product.css
@@ -5,3 +5,11 @@
 #storage-temperature {
     white-space: nowrap;
 }
+
+#temperature-select {
+    width: fit-content;
+}
+
+#energy-value-select {
+    width: fit-content;
+}
