--- a/templates/mobile_header.html
+++ b/templates/mobile_header.html
@@ -10,7 +10,7 @@
         <li class="list-group-item mobile-header-item text-center">
             <a href="{% url 'home' host 'app_mobile' %}"
                class="d-flex flex-column justify-content-center">
-                <div class="m-0 mb-3">
+                <div class="mt-3 mb-3">
                     {% include 'include/logo100x100.html' %}
                 </div>
                 <h4>FooDate</h4>
@@ -33,6 +33,11 @@
             <li class="list-group-item mobile-header-item">
                 <a class="nav-link" href="{% url 'app' host 'app_mobile' %}">
                     Холодильник
+                </a>
+            </li>
+            <li class="list-group-item mobile-header-item">
+                <a class="nav-link" href="{% url 'products' host 'book' %}">
+                    Продукты
                 </a>
             </li>
             <li class="list-group-item mobile-header-item">
