--- a/templates/book/product.html
+++ b/templates/book/product.html
@@ -160,10 +160,10 @@
         </div>
     </div>
     <script>
-        let minStorageTemperature = '{{ product.min_storage_temperature }}'
-        let maxStorageTemperature = '{{ product.max_storage_temperature }}'
-        let storageTemperatureUnit = '{{ product.storage_temperature_unit }}'
-        let energyValue = '{{ product.energy_value }}'
+        let minStorageTemperature = '{{ product.min_storage_temperature }}';
+        let maxStorageTemperature = '{{ product.max_storage_temperature }}';
+        let storageTemperatureUnit = '{{ product.storage_temperature_unit }}';
+        let energyValue = '{{ product.energy_value }}';
         let energyValueUnit = '{{ product.energy_value_unit }}'
     </script>
     <script type="text/javascript" src="{% static 'js/constants.js' %}"></script>
