--- a/templates/book/products.html
+++ b/templates/book/products.html
@@ -391,7 +391,7 @@
         </script>
     {% endif %}
     <script>
-        const categorySlug = getUrlParameter('category')
+        const categorySlug = getUrlParameter('category');
         const categoryCollapse = document.getElementById(categorySlug + '-collapse');
         // noinspection JSUnusedGlobalSymbols
         const bsCollapse = new bootstrap.Collapse(categoryCollapse, {
