--- a/templates/users/mobile/profile.html
+++ b/templates/users/mobile/profile.html
@@ -1,47 +1,49 @@
-<div class="container-fluid">
-    <h4 class="text-center mt-3">Профиль</h4>
-    <hr>
-    <div class="mx-auto my-4 text-center w-75">
-        <h5 class="mb-4 text-nowrap">Личная информация</h5>
 
-        <form method="post" class="form-control mb-4">
+
+<div>
+    <div style="position: sticky; top: 0; height: 45px; max-height: 45px; background-color: white;
+        z-index: 99;">
+        <h4 class="text-center h-100 m-0 pt-1">Профиль</h4>
+        <hr class="m-0 text-apple">
+    </div>
+
+    <div class="mx-auto my-4 text-center d-flex flex-column align-items-center">
+
+        <form method="post" class="mb-4 d-flex flex-column align-items-center w-75">
             {% csrf_token %}
-            <div class="row mb-3">
-                <div>
-                    Email:
-                    {{ form.email }}
-                </div>
+            <div class="mb-3">
+                <div>Email:</div>
+                {{ form.email }}
             </div>
-            <div class="row mb-3">
-                <div>
-                    {{ form.first_name.label_tag }}
-                    {{ form.first_name }}
-                </div>
+            <div class="mb-3">
+                <div>{{ form.first_name.label_tag }}</div>
+                {{ form.first_name }}
             </div>
-            <div class="row mb-3">
-                <div>
-                    {{ form.last_name.label_tag }}
-                    {{ form.last_name }}
-                </div>
+            <div class="mb-3">
+                <div>{{ form.last_name.label_tag }}</div>
+                {{ form.last_name }}
             </div>
             <div class="text-danger">
                 {% for error in form.errors.values %}
                     {{ error }}
                 {% endfor %}
             </div>
-            <div class="row mb-3">
+            <div class="mb-3">
                 <input class="btn btn-outline-apple mx-auto mt-5" type="submit"
                        value="Сохранить">
             </div>
-            <div class="row">
-                <div class="col text-center">
+            <div class="row g-2" style="max-width: fit-content">
+                <div class="col">
                     <a class="btn btn-outline-danger mb-1 mx-auto text-nowrap"
                        href="/auth/password_change">
                         Изменить пароль
                     </a>
                 </div>
-                <div class="col text-center">
-                    <a class="btn btn-danger mx-auto" href="/auth/logout">Выйти</a>
+                <div class="col">
+                    <a class="btn btn-danger mx-auto"
+                       href="/auth/logout">
+                        Выйти
+                    </a>
                 </div>
             </div>
         </form>
