--- a/static/css/mobile_header.css
+++ b/static/css/mobile_header.css
@@ -3,10 +3,6 @@ main {
     padding-bottom: 20px;
 }
 
-#header {
-    position: fixed;
-    top: 300px;
-}
 
 #logo {
     width: 50px;
@@ -18,6 +14,8 @@ main {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 500;
     align-self: center;
+    padding-top: .2rem;
+    padding-bottom: .2rem;
 }
 
 .nav-link:hover {
@@ -138,6 +136,7 @@ label a {
     display: block;
     color: white;
     text-decoration: none;
+    font-size: medium;
 }
 
 label a:hover {
@@ -148,4 +147,14 @@ label a:hover {
     height: 50px;
     width: 50px;
     z-index: 1000;
+}
+
+.list-group-flush>.list-group-item {
+    padding: .2rem 1rem .2rem 1rem;
+}
+
+.fullscreen-btn {
+    position: fixed;
+    top: 5px;
+    left: -38px;
 }
