--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,6 +1,6 @@
 header {
     padding-top: 5px;
-    position: sticky;
+    position: relative;
     top: 0;
     background-color: white;
     z-index: 100;
@@ -14,7 +14,7 @@ header {
     border-radius: 100px;
 }
 
-#logo {
+.logo {
     width: 50px;
     height: 50px;
 }
