--- a/templates/mobile_header.html
+++ b/templates/mobile_header.html
@@ -10,7 +10,7 @@
         <li class="list-group-item mobile-header-item text-center">
             <a href="{% url 'home' host 'app_mobile' %}"
                class="d-flex flex-column justify-content-center">
-                <div class="mt-3 mb-3">
+                <div class="mb-2">
                     {% include 'include/logo100x100.html' %}
                 </div>
                 <h4>FooDate</h4>
@@ -46,7 +46,7 @@
                 </a>
             </li>
             <li class="list-group-item mobile-header-item">
-                <a class="btn-outline-white btn nav-btn" href="{% url 'logout' host 'app' %}">
+                <a class="nav-link" href="{% url 'logout' host 'app' %}">
                     Выйти
                 </a>
             </li>
