Email verification implemented

--- a/templates/include/popup.html
+++ b/templates/include/popup.html
@@ -15,7 +15,7 @@
                 {% endblock %}
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-outline-aqua" data-bs-dismiss="modal">Закрыть</button>
+                <button type="button" class="btn btn-outline-apple" data-bs-dismiss="modal">Закрыть</button>
             </div>
         </div>
     </div>
