--- a/templates/users/pc/profile.html
+++ b/templates/users/pc/profile.html
@@ -1,43 +1,49 @@
 <div class="container-fluid">
     <h2>Профиль</h2>
     <hr>
-    <div class="mx-auto my-5">
+    <div class="row mx-auto my-5 text-center">
         <h4 class="mb-4">Личная информация</h4>
 
-        <form method="post" class="mb-4">
+        <form method="post" class="mx-auto my-4"
+              style="max-width: 500px">
             {% csrf_token %}
             <div class="row mb-3">
-                <div class="col-4">
-                    {{ form.email.label_tag }}
+                <div class="col-1"></div>
+                <div class="col-3">
+                    Email:
                 </div>
-                <div class="col-8">
+                <div class="col-7">
                     {{ form.email }}
                 </div>
             </div>
             <div class="row mb-3">
-                <div class="col-4">
+                <div class="col-1"></div>
+                <div class="col-3">
                     {{ form.first_name.label_tag }}
                 </div>
-                <div class="col-8">
+                <div class="col-7">
                     {{ form.first_name }}
                 </div>
             </div>
             <div class="row mb-3">
-                <div class="col-4">
+                <div class="col-1"></div>
+                <div class="col-3">
                     {{ form.last_name.label_tag }}
                 </div>
-                <div class="col-8">
+                <div class="col-7">
                     {{ form.last_name }}
                 </div>
             </div>
-            <div class="text-danger">
+            <div class="text-danger mb-3">
                 {% for error in form.errors.values %}
                     {{ error }}
                 {% endfor %}
             </div>
-            <input class="btn btn-outline-apple mx-auto" type="submit" value="Сохранить">
+            <input class="btn btn-outline-apple mx-auto mt-3 w-50" type="submit" value="Сохранить">
         </form>
-        <a class="btn btn-outline-danger" href="/auth/password_change">Изменить пароль</a>
-        <a class="btn btn-danger" href="/auth/logout">Выйти</a>
+        <div class="text-center">
+            <a class="btn btn-outline-danger" href="/auth/password_change">Изменить пароль</a>
+            <a class="btn btn-danger" href="/auth/logout">Выйти</a>
+        </div>
     </div>
 </div>
