--- a/templates/users/pc/signup.html
+++ b/templates/users/pc/signup.html
@@ -15,6 +15,15 @@
         <div class="row mb-3">
             <div class="col-2"></div>
             <div class="col-1">
+                Email:
+            </div>
+            <div class="col-8">
+                {{ form.email }}
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-2"></div>
+            <div class="col-1">
                 {{ form.first_name.label_tag }}
             </div>
             <div class="col-8">
@@ -48,7 +57,7 @@
                 {{ form.password2 }}
             </div>
         </div>
-        <div class="text-danger">
+        <div class="text-danger mb-3">
             {% for error in form.errors.values %}
                 {{ error }}
             {% endfor %}
