--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
     Профиль
@@ -6,6 +7,7 @@
 
 {% block content %}
     {% load user_agents %}
+    <link rel="stylesheet" href="{% static 'css/users/profile.css' %}">
     {% if request|is_mobile or request|is_tablet %}
         {% include 'users/mobile/profile.html' %}
     {% else %}
