--- a/templates/users/mobile/signup.html
+++ b/templates/users/mobile/signup.html
@@ -31,6 +31,9 @@
             {% for error in form.errors.values %}
                 {{ error }}
             {% endfor %}
+            {% for error in errors %}
+                {{ error }}
+            {% endfor %}
         </div>
         <input class="btn btn-apple mx-auto" type="submit" value="Зарегистрироваться"/>
     </form>
