--- a/templates/users/password_reset_email.html
+++ b/templates/users/password_reset_email.html
@@ -62,7 +62,7 @@
     <br>
 
     <div class="text-center">
-        Ваш логин (на случай, если вы его тоже забыли):<br>
+        Ваш логин (на случай, если Вы его тоже забыли):<br>
         <h3 class="text-apple"
             style="border: 1px solid #269926; padding: 10px; width: 30%; max-width:300px;
             display: block; margin-left: auto; margin-right: auto; font-size: large;">
