Edited email verification message

--- a/templates/users/email_verification.html
+++ b/templates/users/email_verification.html
@@ -62,7 +62,6 @@
     <br>
 
     <div class="text-center">
-        Вы зарегистрировались под логином:<br>
         <h3 class="text-apple"
             style="border: 1px solid #269926; padding: 10px; width: 30%; max-width:300px;
             display: block; margin-left: auto; margin-right: auto; font-size: large;">
@@ -71,14 +70,14 @@
     </div>
 
     <p class="text-center text-secondary small">
-        Нажмите кнопку ниже для активации аккаунта.
+        Нажмите кнопку ниже для подтверждения email.
     </p>
 
     <a class="btn btn-apple text-center"
        href="{{ link }}"
        style="display: block; margin-left: auto;margin-right: auto; font-size: x-large;
        width: 70%; max-width: 500px">
-        Активировать аккаунт
+        Подтвердить email
     </a>
 
     <p class="text-center">Действие ссылки заканчивается в {{ expiry|time:"TIME_FORMAT" }}</p>
