--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         <link rel="icon" type="image/png" sizes="16x16"
               href={% static "images/fav/favicon-16x16.png" %}>
         <link rel="manifest" href={% static "images/fav/site.webmanifest" %}>
-        <link rel="mask-icon" href={% static "images/fav/safari-pinned-tab.svg" %} color="#269926">
+        <link rel="mask-icon" href="{% static "images/fav/safari-pinned-tab.svg" %}" color=#269926">
         <meta name="msapplication-TileColor" content="#269926">
         <meta name="theme-color" content="#ffffff">
 
