--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
         <meta property="og:title" content="FooDate">
         <meta property="og:description" content="😋 Держите еду под контролем!">
         <meta property="og:url" content="https://foodate.ru">
-        <meta property="og:image" content="https://foodate.ru/static/images/logo/Preview.jpg">
+        <meta property="og:image" content="https://foodate.ru/static/images/logo/Preview.png">
         <meta property="og:site_name" content="foodate.ru">
         <meta property="og:locale" content="ru_RU">
 
