--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,14 @@
 
         {% include 'include/yandex_metrica.html' %}
 
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="FooDate">
+        <meta property="og:description" content="😋 Держите еду под контролем!">
+        <meta property="og:url" content="https://foodate.ru">
+        <meta property="og:image" content="https://foodate.ru/static/images/logo/Preview.png">
+        <meta property="og:site_name" content="FooDate">
+        <meta property="og:locale" content="ru_RU">
+
         {% load static %}
         <script>
             const staticUrl = "{% get_static_prefix %}";
