--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,9 @@
         <!-- js-cookie -->
         <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
 
+        <!-- Fullscreen API -->
+        <script src="https://cdn.jsdelivr.net/npm/fullscreen.js@0.2.5/dist/fullscreen.min.js"></script>
+
         <!-- API -->
         {% if token %}
             <script type="text/javascript">token = '{{ token }}';</script>
