Implemented recipes page for mobile

--- a/templates/book/mobile/recipe.html
+++ b/templates/book/mobile/recipe.html
@@ -10,59 +10,57 @@
 {% block content %}
     <link href="{% static 'css/book/recipe.css' %}" rel="stylesheet">
 
+    <div style="position: sticky; top: 0; height: 45px; max-height: 45px;
+         background-color: white; z-index: 99;">
+        <h4 class="text-apple text-center h-100 m-0 pt-1">Рецепт</h4>
+        <hr class="m-0 text-apple">
+    </div>
     <div class="container-fluid text-center">
-        <h3>{{ recipe.name }}</h3>
-        <hr>
+        {% if recipe.image %}
+            <div class="row d-flex align-items-center h-50">
+                <img src="{% uploads recipe.image %}" alt="{{ recipe.name }}"
+                 class="img-fluid recipe-img w-auto">
+            </div>
+        {% endif %}
         <div class="row">
-            {% if recipe.image %}
-                <div class="col-6">
-                    <div class="row d-flex align-items-center h-50">
-                        <img src="{% uploads recipe.image %}" alt="{{ recipe.name }}"
-                         class="img-fluid recipe-img w-auto">
-                    </div>
-                    <div class="row"></div>
-                </div>
-            {% endif %}
-            <div class="col-6 mx-auto">
-                <table class="table table-hover">
+            <table class="table table-hover small">
+                <tr>
+                    <td>Название</td>
+                    <td>{{ recipe.name }}</td>
+                </tr>
+                <tr>
+                    <td>Категория</td>
+                    <td>{{ recipe.category }}</td>
+                </tr>
+                {% if recipe.energy_value %}
                     <tr>
-                        <td>Название</td>
-                        <td>{{ recipe.name }}</td>
-                    </tr>
-                    <tr>
-                        <td>Категория</td>
-                        <td>{{ recipe.category }}</td>
-                    </tr>
-                    {% if recipe.energy_value %}
-                        <tr>
-                            <td>Энергетическая ценность</td>
-                            <td>
-                                <div class="row justify-content-center align-items-center">
-                                    <div class="col"></div>
-                                    <div class="col text-end">
-                                        <span id="energy-value">
-                                            {{ recipe.energy_value|floatformat }}
-                                        </span>
-                                    </div>
-                                    <div class="col-5 text-start" style="max-width: 100px">
-                                        {% include 'include/energy_select.html' %}
-                                    </div>
-                                    <div class="col"></div>
+                        <td>Энергетическая ценность</td>
+                        <td>
+                            <div class="row justify-content-center align-items-center">
+                                <div class="col"></div>
+                                <div class="col text-end">
+                                    <span id="energy-value">
+                                        {{ recipe.energy_value|floatformat }}
+                                    </span>
                                 </div>
-                            </td>
-                        </tr>
-                    {% endif %}
-                    <tr>
-                        <td colspan="2">
-                            <div class="text-center">Рецепт</div>
-                            <hr class="my-1 mx-auto">
-                            <div>{{ recipe.recipe.html|safe }}</div>
+                                <div class="col-5 text-start" style="max-width: 100px">
+                                    {% include 'include/energy_select.html' %}
+                                </div>
+                                <div class="col"></div>
+                            </div>
                         </td>
                     </tr>
-                </table>
-            </div>
+                {% endif %}
+                <tr>
+                    <td colspan="2">
+                        <div class="text-center">Рецепт</div>
+                        <hr class="my-1 mx-auto">
+                        <div>{{ recipe.recipe.html|safe }}</div>
+                    </td>
+                </tr>
+            </table>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-2">
             {% if photos %}
                 <h3>Фотографии</h3>
                 <div id="photosCarousel" class="carousel carousel-dark slide w-75 mt-3 mx-auto"
@@ -77,13 +75,13 @@
                         {% endfor %}
                     </ol>
                     <div class="carousel-inner">
-                        <div class="carousel-item w-100 h-75 active">
+                        <div class="carousel-item w-100 active">
                             <img src="{% uploads recipe.image %}"
                                  class="img-fluid img-thumbnail w-100"
                                  alt="{{ recipe.name }} №0">
                         </div>
                         {% for photo in photos %}
-                            <div class="carousel-item w-100 h-75">
+                            <div class="carousel-item w-100">
                                 <img src="{% uploads photo.upload %}"
                                      class="img-fluid img-thumbnail w-100"
                                      alt="{{ recipe.name }} №{{ forloop.counter }}">
