--- a/templates/book/recipes.html
+++ b/templates/book/recipes.html
@@ -36,7 +36,7 @@
                                 {% for category in categories %}
                                     <li class="list-group-item p-0">
                                         <div class="category-card">
-                                            <!-- Product category -->
+                                            <!-- Recipe category -->
                                             <div class="p-0" id="{{ category.slug }}-heading"
                                             onclick="location.href = '/recipes?category={{ category.slug }}&' + cardsPerPageQuery">
                                                 <a class="btn btn-link btn-block text-left
