--- a/templates/mobile_header.html
+++ b/templates/mobile_header.html
@@ -45,6 +45,11 @@
                 </a>
             </li>
             <li class="list-group-item mobile-header-item">
+                <a class="nav-link" href="{% url 'recipes' host 'book' %}">
+                    Рецепты
+                </a>
+            </li>
+            <li class="list-group-item mobile-header-item">
                 <a class="nav-link" href="{% url 'profile' host 'app' %}">
                     Профиль
                 </a>
